crates/rulesteward-fapolicyd/tests/snapshots/fapd-W01__narrow-then-broad-ok.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
assertion_line: 150
expression: rendered
---
parse=ok
diagnostics=0
(no diagnostics)
